Fix broken reference link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ol>
 
         <p>Also check out <a href="https://twitch.tv/asaka_music" target="_blank" rel="noreferrer">this</a> page, it's <em>really</em> cool.</p>
-        <p>And take a look at <a href="./other/someotherpage.html">this</a> super cool page!</p>
+        <p>And take a look at <a href="./pages/someotherpage.html">this</a> super cool page!</p>
         <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/6dbe2e49-ab51-471a-a495-2809fd85a72c-profile_image-70x70.png"
             alt="Asaka's OC picture" height="250px" width="250px">
     </body>
